# rat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  main.c
src/: alloc.c  alloc.h  bool.h  main.c  options.h  print_dir.c  print_dir.h  print_file.c  print_file.h  print_help.c  print_help.h  str_contains.c  str_contains.h  string_manipulation.c  string_manipulation.h  term.c  term.h
src/def/: alloc.c  alloc.h  options.h  program.h  style.c  style.h  term.c
